tests/NormalTests/paczka1/small_fuzzy/21157947.err
Error in line 3: Ic62XAIE S823 63,5
Error in line 5: XWaZ9m4PZjI A733 639,4
